* The "and", "or", and "not" keywords are synonyms for the &&, ||, and !
  operators, respectively. (If this seems strange, note that this is
  true of C++ as well.) #446 (1.6.2)
* oslc will now silently ignore trailing commas in function or shader
  parameter lists and metadata lists. #447 (1.6.2)
* oslc bug fixed in variable declaration + assignment of nested structs.
  #453 (1.6.2)

API changes, new options, new ShadingSystem features (for renderer writers):
* New ShadingSystem attribute int "profile", if set to 1, will include
  in the runtime statistics output a measure of how much total time was
  spent executing shaders, as well as the identities and times of the 5
  shader groups that spent the most time executing.  Note that this
  option is 0 (off) by default, since turning it on can add
  significantly to total runtime for some scenes.  #418 (1.6.2)
* New per-ShaderGroup attributes:
   * You can retrieve information about all closures that an optimized group
     might create using new queries "num_closures_needed", "closures_needed",
     "unknown_closures_needed". This could be useful for renderers by, for
     example, noticing that a material can't possibly call the "transparent"
     closure, and thus concluding that it must be opaque everywhere and thus
     shadow rays need not execute shaders to determine opacity. (#400) (1.6.0)
   * You can retrieve information about all "globals" (P, N, etc.) that an
     optimized group needs using new queries "num_globals_needed" and
     "globals_needed". This could be useful for renderers for which
     computing those globals is very expensive; examining which are truly
     needed and only computing those. (#401) (1.6.0)
* It is now possible to specify per-group "renderer_outputs" in the form
  "layername.paramname", thus designating a parameter of a specific layer
  as a render output that should be preserved, but excluding identically
  named output variables in other layers. #430 (1.6.2)