@@ -1,0 +1,13 @@
+void print_array_contents (string name, float f[])
+{
+    printf ("%s array length %d\n", name, arraylength(f));
+    for (int i = 0; i < arraylength(f); ++i)
+        printf ("  [%d] = %g\n", i, f[i]);
+}
+
+
+shader test (float a[] = {0}, float b[] = {0})
+{
+    print_array_contents ("a", a);
+    print_array_contents ("b", b);
+}
