@@ -1,0 +1,9 @@
+Compiled test.osl -> test.oso
+a array length 5
+  [0] = 1.1
+  [1] = 1.2
+  [2] = 1.3
+  [3] = 1.4
+  [4] = 1.5
+b array length -1
+
